--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :fingerprint %>
-    <%= form.text_field :fingerprint, id: :account_fingerprint %>
+    <%= h(@account[:fingerprint]) %>
   </div>
 
   <div class="actions">
