--- a/app/views/credits/_form.html.erb
+++ b/app/views/credits/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :account_id %>
-    <%= form.text_field :account_id, id: :credit_account_id %>
+    <%= collection_select(:credit, :account_id, Credit.all, :id, :owner_name) %>
   </div>
 
   <div class="field">
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :value %>
-    <%= form.number_field :value, id: :credit_value %>
+    <%= h(:value) %>
   </div>
 
   <div class="actions">
